fixed bug #169 (line 432 in styles.css and added overflow hidden on line 477 in styles.css to contain content)

--- a/docroot/profiles/drupal_commons/themes/commons_environs/css/styles.css
+++ b/docroot/profiles/drupal_commons/themes/commons_environs/css/styles.css
@@ -429,6 +429,10 @@ label {
   margin-bottom: 0;
 }
 
+#content-tabs ul.primary {
+	margin-left: 7px;
+}
+
 #content-tabs ul.primary li a:link, #content-tabs ul.primary li a:visited {
   -moz-border-radius-topleft: 7px;
   -moz-border-radius-topright: 7px;
@@ -470,6 +474,7 @@ label {
   -webkit-border-radius: 16px;
   border-radius: 16px;
   border: 2px solid #fbb03b;
+  overflow: hidden;
 }
 
 .page-dashboard .content-content {
